[metadata]
name = pycoxmunk
version = 1.1.0
author = Simon R Proud
author_email = simon.proud@stfc.ac.uk
description = An algorithm to compute sea surface reflectance using the Cox-Munk approach.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simonrp84/PyCoxMunk
project_urls =
    Bug Tracker = https://github.com/simonrp84/PyCoxMunk/issues
classifiers =
    Programming Language :: Python :: 3
    LICENSE :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    =.
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21.2
    scipy>=1.7.1
    pandas>=1.3.4
    dask>=2021.10.0
    pyorbital>=1.7.1
    pyresample>=1.22.1
    satpy>=0.30
    click>=8.0.3
    numba>=0.55.0
    xarray>=0.20.2

[options.packages.find]
where=.

[flake8]
max-line-length=120
